<resources>
    <string name="app_name">Flane</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_login">Войти</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_email_or_login">E-mail или логин</string>
    <string name="btn_register">Регистрация</string>
    <string name="authorization_data">Данные для авторизации</string>
    <string name="personal_data">Личные данные</string>
    <string name="hint_edit_name">Имя</string>
    <string name="hint_edit_surname">Фамилия</string>
    <string name="hint_edit_email">E-mail</string>
    <string name="hint_login">Логин</string>
    <string name="error_message_register_user">Во время регистрации произошла ошибка</string>
    <string name="success_message_register_user">Регистрация прошла успешно</string>
    <string name="title_registration">Регистрация</string>
    <string name="repeat_email_message">Пользователь с таким email`ом уже зарегистрирован</string>
    <string name="repeat_login_message">Пользователь с таким логином уже зарегистрирован</string>
    <string name="message_invalidate_email">Email введен неверно</string>
    <string name="message_invalidate_password">Пароль должен быть не меньше 8-ми символов</string>
    <string name="message_invalidate_other_data">Заполните все поля</string>
    <string name="title_authorization">Авторизация</string>
    <string name="error_message_login_user">Пользователь не найден. Ошибка авторизации.</string>
    <string name="message_invalidate_login_data">Заполните все поля</string>
    <string name="message_no_internet">Проверьте подключение к интернету</string>
    <string name="title_task_list">Список задач</string>
    <string name="item_menu_profile">Профиль</string>
    <string name="task_comments">Комментарии</string>
    <string name="hint_edit_comment">Комментарий…</string>
    <string name="message_dialog_delete_task">Удалить задачу?</string>
    <string name="title_dialog_delete_task">УДАЛЕНИЕ</string>
    <string name="positiveBtn_dialog_delete_task">Да</string>
    <string name="negativeBtn_dialog_delete_task">Нет</string>
    <string name="details_task_menu_memberTask">Участники</string>
    <string name="no_comments">Комментариев нет</string>
    <string name="description">Описание:</string>
    <string name="textBtnAddTask">Создать</string>
    <string name="color">Цвет:</string>
    <string name="participants">Участники:</string>
    <string name="input_email_participant">Введите email участника…</string>
    <string name="download_avatar">Загрузить аватар</string>
    <string name="all_task">Всего задач</string>
    <string name="personal_task">Личные</string>
    <string name="group_task">Групповые</string>
    <string name="textBtnSaveProfile">Сохранить изменения</string>
    <string name="textHintName">Имя</string>
    <string name="textHintSurname">Фамилия</string>
    <string name="textHintEmail">E-mail</string>
    <string name="textHintLogin">Логин</string>
    <string name="textHintOldPassword">Текущий пароль</string>
    <string name="textHintNewPassword">Новый пароль</string>
    <string name="change_password">Сменить пароль</string>
    <string name="item_menu_edit">Редактировать</string>
    <string name="change_personal_data">Изменить профиль</string>
    <string name="change_avatar">Изменить аватар</string>
    <string name="success_message_edit_personal_data">Изменения сохранены</string>
    <string name="error_message_edit_personal_data">Ошибка! Изменения не были сохранены!</string>
    <string name="error_message_update_avatar">Не удалось обновить аватар</string>
    <string name="error_message_change_password">Не удалось сменить пароль</string>
    <string name="message_wrong_password">Текущий пароль введен неверно</string>
    <string name="success_message_change_password">Пароль успешно изменен</string>
    <string name="error_message_repeat_old_password">Новый пароль совпадает с текущим</string>
    <string name="end_date">Дата окончания:</string>
    <string name="no_date">Без даты</string>
    <string name="no_participants">Без участников</string>
    <string name="error_message_add_participant">Пользователь не найден</string>
    <string name="message_empty_email">Поле не заполнено</string>
    <string name="success_message_create_task">Задача создана</string>
    <string name="error_message_create_task">Ошибка. Задача не создана.</string>

</resources>
