<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistrationFragment"
    android:orientation="vertical"
    android:background="@color/color_text_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:text="@string/authorization_data" />

            <EditText
                android:id="@+id/editLoginRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/hint_login"
                android:inputType="textPersonName"
                android:lines="1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editPasswordRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:lines="1"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:text="@string/personal_data" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageAvatarRegistration"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:src="@mipmap/no_avatar"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"/>

                <Button
                    android:id="@+id/btnDownloadAvatar"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:text="@string/download_avatar"
                    android:textColor="@color/color_text_white"/>

            </LinearLayout>

            <EditText
                android:id="@+id/editNameRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_edit_name"
                android:inputType="textPersonName"
                android:lines="1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editSurnameRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_edit_surname"
                android:inputType="textPersonName"
                android:lines="1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editEmailRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_edit_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/background_btn_login"
                android:text="@string/btn_register"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/color_text_white"/>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/blackoutBackgroundRegistration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackout"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center" />
    </FrameLayout>

</FrameLayout>