<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.EditPersonalDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/personal_data" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/textHintName">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPersonalDataName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextLayoutSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/textHintSurname">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPersonalDataSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/textHintEmail">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPersonalDataEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/textHintLogin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPersonalDataLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lines="1"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSavePersonalData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textBtnSaveProfile"
        android:textColor="@color/color_text_white"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="@color/background_btn_add_task"/>

    <FrameLayout
        android:id="@+id/blackoutBackgroundEditPersonalData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackout"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center" />
    </FrameLayout>

</FrameLayout>