<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/change_password" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextLayoutOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/textHintOldPassword">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:lines="1"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editTextLayoutNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/textHintNewPassword">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:lines="1"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSavePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textBtnSaveProfile"
        android:textColor="@color/color_text_white"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="@color/background_btn_add_task"/>

</FrameLayout>