<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:orientation="vertical"
    android:background="@color/color_text_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageAvatarProfile"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/no_avatar" />

        <TextView
            android:id="@+id/textNameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Имя Фамилия"
            android:textColor="@color/color_text_black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/textEmailProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="blabla-blabla@gmail.com"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/color_text_white"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textAllTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/background_task_profile"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:maxLines="1"
            android:text="@string/all_task"
            android:textColor="@color/color_text_black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textPersonalTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/background_task_profile"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:maxLines="1"
            android:text="@string/personal_task"
            android:textColor="@color/color_text_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textGroupTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/background_task_profile"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:maxLines="1"
            android:text="@string/group_task"
            android:textColor="@color/color_text_black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>